# madopen

./: .gitignore  README.md  madopen.sh  pyproject.toml  todo.md
docs/superpowers/plans/: 2026-06-24-madopen-publishable.md
docs/superpowers/specs/: 2026-06-24-madopen-publishable-design.md
src/madopen/: cli.py  config.py  paths.py  preview.py  shell.py
tests/: test_config.py  test_entry.py  test_history.py  test_launch.py  test_madft.py  test_paths.py  test_peek.py  test_picker.py  test_preview.py  test_shell.py
